Fix problems